# ratune

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  README.md  sample-config.toml
playterm/: Cargo.toml
playterm-player/: Cargo.toml
playterm-player/src/: engine.rs  lib.rs  tap.rs
playterm-subsonic/: Cargo.toml
playterm-subsonic/src/: client.rs  lib.rs  models.rs
playterm/src/: action.rs  app.rs  config.rs  keybinds.rs  main.rs  state.rs  theme.rs
playterm/src/ui/: albums.rs  art_prepare.rs  artists.rs  browser.rs  home_tab.rs  kitty_art.rs  mod.rs  now_playing.rs  nowplaying_tab.rs  queue.rs  tracks.rs  visualizer.rs
ratune/: Cargo.toml
ratune-player/: Cargo.toml
ratune-player/src/: engine.rs
ratune-subsonic/: Cargo.toml
ratune-subsonic/src/: client.rs  error.rs  lib.rs  models.rs
ratune/src/: action.rs  app.rs  config.rs  keybinds.rs  keyring_init.rs  lib.rs  persist.rs  state.rs  theme.rs
ratune/src/handler/: browser.rs  home.rs  mod.rs  playlists.rs  queue.rs
ratune/src/keymap/: browser.rs  home.rs  mod.rs  playlists.rs
ratune/src/ui/: albums.rs  art_prepare.rs  artists.rs  browser.rs  folder_tracks.rs  folders.rs  home_tab.rs  kitty_art.rs  layout.rs  mod.rs  now_playing.rs  nowplaying_tab.rs  playlist_overlay.rs  playlists_tab.rs  popup.rs  queue.rs  status_bar.rs  tab_bar.rs  terminal_palette.rs  tracks.rs  visualizer.rs
ratune/src/ui/home/: mod.rs
ratune/src/ui/nowplaying/: mod.rs
ratune/src/ui/playlists/: mod.rs
