[workspace]
members = ["ratune-subsonic", "ratune-player", "ratune"]
resolver = "2"

# https://github.com/crate-ci/cargo-release — GitHub/binary releases only until you publish to crates.io.
[workspace.metadata.release]
publish = false
# Default would be `ratune-v{{version}}`, which does not match `.github/workflows/release.yml` (`v*`).
tag-name = "v{{version}}"

# Smaller release binaries (typ. ~1/3 less than defaults for this project). Slower `cargo build --release`.
# See https://github.com/taiki-e/upload-rust-binary-action#optimize-rust-binary
# Use `lto = true` (fat LTO) instead of `thin` for a bit more shrink, slower link.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
