[package]
name = "ratune"
version = "0.11.0"
edition = "2021"
description = "A terminal music player for Subsonic-compatible servers"
license = "MIT"
repository = "https://github.com/acmagn/ratune"
homepage = "https://github.com/acmagn/ratune"
readme = "../README.md"
keywords = ["music", "tui", "subsonic", "navidrome", "terminal"]
categories = ["command-line-utilities", "multimedia::audio"]

[lib]
name = "ratune"
path = "src/lib.rs"

[[bin]]
name = "ratune"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratune-player = { version = "0.1.0", path = "../ratune-player" }
ratune-scrobble = { version = "0.1.0", path = "../ratune-scrobble" }
ratune-subsonic = { version = "0.1.2", path = "../ratune-subsonic" }
ratatui = { version = "0.29", features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
image = "0.25"
base64 = "0.22"
flate2 = "1"
palette_extract = "0.1"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
rand = "0.8"
rustfft = "6"
notify-rust = "4"
ratatui-image = { version = "9.0", default-features = false, features = ["image-defaults", "crossterm"] }
inquire = "0.7"
keyring-core = "1"
unicode-width = "0.2"

# Platform credential stores for keyring-core — see https://crates.io/crates/keyring-core
[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }
linux-keyutils-keyring-store = "1"
mpris-server = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"
